# alfred_full

./: .gitignore  .project  .rosinstall  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py  update_packages_source.py
scripts/: CMakeLists.txt  alfred_tools
src/alfred/: __init__.py  alfred_main.py
src/templates/: template.project
