<?xml version="1.0"?>
<package>
  <name>alfred_full</name>
  <version>0.1.84</version>
  <description>This metapackage depends on package for full alfred stack. This package is full Alfred Assistant stack.</description>
  
  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>python-rospkg</build_depend>
  
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>alfred</run_depend>
  <run_depend>media_camera_ip_driver</run_depend>
  <!--run_depend>media_onkyo_ip_driver</run_depend-->
  <run_depend>media_samsung_ip_driver</run_depend>
  <run_depend>media_xbmc_ip_driver</run_depend>
  <run_depend>alfred_skype</run_depend>
  <run_depend>home_weather</run_depend>
  <run_depend>network_wakeonlan</run_depend>
  <run_depend>alfred_tts_linux</run_depend>

</package>
